yet still more doc updates